@@ -371,6 +371,7 @@
       guru mode (<command>-g</command>).
     </para>
 !Itapset/linux/conversions-guru.stp
+!Itapset/uconversions-guru.stp
     </chapter>
 
   <chapter id="guru-delay.stp">
